<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SystemOperationParameters" Id="{6364569f-26c9-4f24-a355-cd28d162d8af}">
    <Declaration><![CDATA[TYPE SystemOperationParameters :
STRUCT
	EN: BOOL := TRUE;	// Enable the GreenMaster unit |||| Aktivera GreenMaster-enheten
	ENO: BOOL; // The GreenMaster unit is running
	RemoteEN: BOOL := TRUE;
	RemoteStart : SystemStatesRunModeExternal:=SystemStatesRunModeExternal.Auto;
	Mode:SystemStatesRunMode;
	IoUpdateEN: BOOL := TRUE; // Update inputs and outputs
	Simulation: BOOL := FALSE;
	FireDamperUsed: BOOL := TRUE;
	State: SystemStates; // Operation state
	{attribute 'TcEncoding':='UTF-8'}
	SystemName: STRING := 'GM'; // System name |||| Systemnamn
	StartupHeatRecoveryTime: TIME := TIME#3M;
	ExhaustFanStartupDelay: TIME := TIME#0S;
	SupplyFanStartupDelay: TIME := TIME#1M;
	PostVentilationTime: TIME := TIME#2M;
	PostFireVentilationTime: TIME := TIME#0M;
	TimeChannels: TimeChannelParameters;
	StartupDamperWaitTime: TIME := TIME#1M;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>